# mc-sheetmusic2noteblock

./: .gitignore  CLAUDE.md  README.md  compose.override.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py  storage.py
backend/app/api/: blueprints.py  omr.py  scores.py
backend/app/models/: blueprint.py  events.py  omr.py  settings.py
backend/app/services/: block_reuse.py  blueprint_builder.py  hand_split.py  instruments.py  layout.py  materials.py  omr_client.py  parser.py  pitch_mapper.py  quantizer.py
backend/tests/: test_healthz.py
backend/tests/e2e/: test_api_blueprint.py  test_api_flow.py  test_api_omr.py  test_api_scores.py
backend/tests/fixtures/: drum_beat.mid  extreme_range.mid  legacy_parsed_without_measure_count.json  scale_c_major.musicxml  sixteenth_150bpm.mid  tempo_change.mid  twinkle.mid  twinkle_both_hands.musicxml
backend/tests/unit/: test_block_reuse.py  test_blueprint_builder.py  test_hand_split.py  test_instruments.py  test_layout.py  test_materials.py  test_models.py  test_omr_client.py  test_omr_merge.py  test_parser.py  test_pitch_mapper.py  test_quantizer.py  test_storage.py
docs/: DESIGN.md  IMPLEMENTATION_PLAN.md  README.md  REQUIREMENTS.md  RESEARCH.md
frontend/: index.html  package.json  playwright.config.js
frontend/css/: print.css  style.css
frontend/js/: api.js  blueprint_view.js  layout_view.js  (+6 more)
homr/: Dockerfile  README.md  requirements.txt
omr/: .dockerignore  Dockerfile  README.md  requirements-dev.txt  requirements.txt  validate.sh
scripts/: make_fixtures.py
(+15 files in other folders)
