[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mc-sheetmusic2jukebox-backend"
version = "0.1.0"
description = "楽譜(MIDI/MusicXML)を Minecraft ジュークボックス設計書へ変換するバックエンド"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "music21",
    "python-multipart",
    "httpx",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
